--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   release:
-    if: github.repository == 'pwndrer4/mynewblog'
+    if: github.repository == 'zvmshhj/zvmshhj'
     name: Build with go ${{ matrix.go_version }} on ${{ matrix.os }} and upload
     runs-on: ${{ matrix.os }}
 
